# ClipMindAI

./: .gitignore  README.md  config.yaml  package-lock.json  package.json  popup.html  vite.config.ts
src/: App.css  App.tsx  popup-main.tsx  popup.css  popup.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actions/: mod.rs  popup.rs
src-tauri/src/analyzer/: ai_engine.rs  content_analyzer.rs  genie_engine.rs  mod.rs  rule_engine.rs
src-tauri/src/clipboard/: content_detector.rs  mod.rs  monitor.rs  types.rs
