[package]
name = "clipmind"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "clipmind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

#[[bin]]
#name = "test_ollama"
#path = "src/bin/test_ollama.rs"

[dependencies]
tauri = { version = "2.6.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tauri-plugin-clipboard-manager = "2.3.0"
sysinfo = { version = "0.29", optional = true }
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
window-vibrancy = "0.6.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde_yaml = "0.9"

[features]
default = []
sysinfo = ["dep:sysinfo"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_System_Threading",
    "Win32"
] }


